--- a/Pipeline_project.ipynb
+++ b/Pipeline_project.ipynb
@@ -432,44 +432,6 @@
         "    # change 'target', 'predicted' to integer strings\n",
         "    df[['target', 'predicted']] = (df[['target', 'predicted']].astype(int)).astype(str)\n",
         "    \n",
-        "    # create kubeflow metric metadata for UI\n",
-        "    metadata = {\n",
-        "        \"outputs\": [\n",
-        "            {\n",
-        "                \"type\": \"confusion_matrix\",\n",
-        "                \"format\": \"csv\",\n",
-        "                \"schema\": [\n",
-        "                    {\n",
-        "                        \"name\": \"target\",\n",
-        "                        \"type\": \"CATEGORY\"\n",
-        "                    },\n",
-        "                    {\n",
-        "                        \"name\": \"predicted\",\n",
-        "                        \"type\": \"CATEGORY\"\n",
-        "                    },\n",
-        "                    {\n",
-        "                        \"name\": \"count\",\n",
-        "                        \"type\": \"NUMBER\"\n",
-        "                    }\n",
-        "                ],\n",
-        "                \"source\": df.to_csv(header=False, index=False),\n",
-        "                \"storage\": \"inline\",\n",
-        "                \"labels\": [\n",
-        "                    \"0\",\n",
-        "                    \"1\",\n",
-        "                    \"2\",\n",
-        "                    \"3\",\n",
-        "                    \"4\",\n",
-        "                    \"5\",\n",
-        "                    \"6\",\n",
-        "                    \"7\",\n",
-        "                    \"8\",\n",
-        "                    \"9\",\n",
-        "                ]\n",
-        "            }\n",
-        "        ]\n",
-        "    }\n",
-        "    \n",
         "    with open(mlpipeline_ui_metadata_path, 'w') as metadata_file:\n",
         "        json.dump(metadata, metadata_file)\n",
         "\n",
@@ -489,7 +451,7 @@
         "# create light weight components\n",
         "download_op = comp.create_component_from_func(download_data,base_image=\"python:3.7.1\")\n",
         "load_op = comp.create_component_from_func(load_data,base_image=\"python:3.7.1\")\n",
-        "preprocess_op = comp.create_component_from_func(preprocess_data,base_image=\"python:3.7.1\")\n",
+        "preprocess_op = comp.create_component_from_func(preprocess_data,base_image=\"tensorflow/tensorflow:latest\")\n",
         "comp.create_component_from_func(preprocess_data,)\n",
         "modeling_op = comp.create_component_from_func(modeling, base_image=\"tensorflow/tensorflow:latest\")\n",
         "predict_op = comp.create_component_from_func(prediction, base_image=\"tensorflow/tensorflow:latest\")"
